Add Exploit Stealer
This captures NBT data from surround players and prints it in your console

--- a/src/main/resources/assets/como-client/lang/en_us.json
+++ b/src/main/resources/assets/como-client/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "itemGroup.como-client.creative_magic": "Como Client: Creative Magic"
+    "itemGroup.como-client.creative_magic": "Como Client: Creative Magic",
+    "itemGroup.como-client.exploit_skids": "Como Client: Skidded Exploits"
 }
